mcp-servers/socrata-mcp/deploy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: socrata-mcp-server
  labels:
    app: socrata-mcp-server
spec:
  containers:
    - name: socrata-mcp-server
      image: ghcr.io/nyu-rts/socrata-mcp-server
      ports:
        - containerPort: 8000
      resources:
        requests:
          cpu: 250m
          memory: 256M
        limits:
          cpu: "1"
          memory: 512M
